--- a/yougotspam/manifest.json
+++ b/yougotspam/manifest.json
@@ -9,5 +9,12 @@
       ],
       "js": ["jquery-3.2.1.min.js", "content.js"]
     }
-  ]
+  ],
+  "browser_action": {
+  	"default_icon": "icon.png"
+	},
+  "permissions": ["storage"],
+	"background": {
+  	"scripts": ["background.js"]
+	}
 }
