--- a/yougotspam/manifest.json
+++ b/yougotspam/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "You Got Spam",
-  "version": "0.2",
+  "version": "0.14",
   "content_scripts": [
     {
       "matches": ["*://*.stackoverflow.com/*", "https://mail.google.com/*"],
@@ -14,7 +14,8 @@
   "permissions": ["tabs", 
     "activeTab", 
     "identity",
-    "<all_urls>"],
+    "<all_urls>",
+    "webNavigation"],
 	"background": {
   	"scripts": ["background.js", "jquery-3.2.1.min.js"]
 	}
