--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,6 @@ scikit-learn==0.20.3
 scipy==1.2.1
 six==1.12.0
 tensorboard==1.12.2
-tensorflow==1.12.0
+tensorflow>=1.12.1
 termcolor==1.1.0
 Werkzeug==0.15.2
