--- a/yougotspam/manifest.json
+++ b/yougotspam/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "You Got Spam",
-  "version": "0.36",
+  "version": "0.46",
   "content_scripts": [
     {
       "matches": ["*://*.stackoverflow.com/*", "https://mail.google.com/*"],
@@ -20,6 +20,7 @@
   	"scripts": ["background.js", "jquery-3.2.1.min.js"]
 	},
   "web_accessible_resources": [
-    "index.html"
+    "index.html",
+    "script.js"
   ]
 }
