--- a/yougotspam/manifest.json
+++ b/yougotspam/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "You Got Spam",
-  "version": "0.46",
+  "version": "0.56",
   "content_scripts": [
     {
       "matches": ["*://*.stackoverflow.com/*", "https://mail.google.com/*"],
@@ -21,6 +21,6 @@
 	},
   "web_accessible_resources": [
     "index.html",
-    "script.js"
+    "popup.js"
   ]
 }
